test/development/acceptance-app/__snapshots__/ReactRefreshLogBox.test.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactRefreshLogBox app default Import trace when module not found in layout 1`] = `
"./app/module.js (1:1)
Module not found: Can't resolve 'non-existing-module'
> 1 | import "non-existing-module"
    | ^

https://nextjs.org/docs/messages/module-not-found

Import trace for requested module:
./app/layout.js"
`;

exports[`ReactRefreshLogBox app default Should not show __webpack_exports__ when exporting anonymous arrow function 1`] = `
"index.js (3:11) @ default

  1 | export default () => {
  2 |   if (typeof window !== 'undefined') {
> 3 |     throw new Error('test')
    |           ^
  4 |   }
  5 |
  6 |   return null"
`;

exports[`ReactRefreshLogBox app default boundaries 1`] = `
"FunctionDefault.js (1:51) @ FunctionDefault

> 1 | export default function FunctionDefault() { throw new Error('no'); }
    |                                                   ^"
`;

exports[`ReactRefreshLogBox app default conversion to class component (1) 1`] = `
"Child.js (4:11) @ ClickCount.render

  2 | export default class ClickCount extends Component {
  3 |   render() {
> 4 |     throw new Error()
    |           ^
  5 |   }
  6 | }"
`;

exports[`ReactRefreshLogBox app default css syntax errors 1`] = `
"./index.module.css (1:1)
Syntax error: Selector "button" is not pure (pure selectors must contain at least one local class or id)

> 1 | button {}
    | ^"
`;

exports[`ReactRefreshLogBox app default logbox: anchors links in error messages 1`] = `"Error: end https://nextjs.org"`;

exports[`ReactRefreshLogBox app default logbox: anchors links in error messages 2`] = `"https://nextjs.org/"`;

exports[`ReactRefreshLogBox app default logbox: anchors links in error messages 3`] = `"Error: https://nextjs.org start"`;

exports[`ReactRefreshLogBox app default logbox: anchors links in error messages 4`] = `"https://nextjs.org/"`;

exports[`ReactRefreshLogBox app default logbox: anchors links in error messages 5`] = `"Error: middle https://nextjs.org end"`;

exports[`ReactRefreshLogBox app default logbox: anchors links in error messages 6`] = `"https://nextjs.org/"`;

exports[`ReactRefreshLogBox app default logbox: anchors links in error messages 7`] = `"https://nextjs.org/"`;

exports[`ReactRefreshLogBox app default module init error not shown 1`] = `
"index.js (3:7) @ eval

  1 | // top offset for snapshot
  2 | import * as React from 'react';
> 3 | throw new Error('no')
    |       ^
  4 | class ClassDefault extends React.Component {
  5 |   render() {
  6 |     return <h1>Default Export</h1>;"
`;

exports[`ReactRefreshLogBox app default should hide unrelated frames in stack trace with nodejs internal calls 1`] = `
"app/page.js (2:3) @ Page

  1 | export default function Page() {
> 2 |   new URL("/", "invalid");
    |   ^
  3 | }"
`;

exports[`ReactRefreshLogBox app default should hide unrelated frames in stack trace with unknown anonymous calls 1`] = `
"app/page.js (4:13) @ eval

  2 |   try {
  3 |     (function() {
> 4 |       throw new Error("This is an error from an anonymous function");
    |             ^
  5 |     })();
  6 |   } catch (e) {
  7 |     throw e"
`;

exports[`ReactRefreshLogBox app default should strip whitespace correctly with newline 1`] = `
"index.js (7:15) @ onClick

   5 |
   6 |       <a onClick={() => {
>  7 |         throw new Error('idk')
     |               ^
   8 |       }}>
   9 |         click me
  10 |       </a>"
`;

exports[`ReactRefreshLogBox app turbo Import trace when module not found in layout 1`] = `
"./app/module.js (1:1)
Module not found: Can't resolve 'non-existing-module'
> 1 | import "non-existing-module"
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

https://nextjs.org/docs/messages/module-not-found"
`;

exports[`ReactRefreshLogBox app turbo Should not show __webpack_exports__ when exporting anonymous arrow function 1`] = `
"index.js (3:11) @
{default export}

  1 | export default () => {
  2 |   if (typeof window !== 'undefined') {
> 3 |     throw new Error('test')
    |           ^
  4 |   }
  5 |
  6 |   return null"
`;

exports[`ReactRefreshLogBox app turbo boundaries 1`] = `
"FunctionDefault.js (1:51) @ FunctionDefault

> 1 | export default function FunctionDefault() { throw new Error('no'); }
    |                                                   ^"
`;

exports[`ReactRefreshLogBox app turbo conversion to class component (1) 1`] = `
"Child.js (4:11) @ ClickCount.render

  2 | export default class ClickCount extends Component {
  3 |   render() {
> 4 |     throw new Error()
    |           ^
  5 |   }
  6 | }"
`;

exports[`ReactRefreshLogBox app turbo css syntax errors 1`] = `
"./index.module.css
Parsing css source code failed
Selector is not pure (pure selectors must contain at least one local class or id), (lightningcss, Selector(button, specificity = 0x1))"
`;

exports[`ReactRefreshLogBox app turbo logbox: anchors links in error messages 1`] = `"Error: end https://nextjs.org"`;

exports[`ReactRefreshLogBox app turbo logbox: anchors links in error messages 2`] = `"https://nextjs.org/"`;

exports[`ReactRefreshLogBox app turbo logbox: anchors links in error messages 3`] = `"Error: https://nextjs.org start"`;

exports[`ReactRefreshLogBox app turbo logbox: anchors links in error messages 4`] = `"https://nextjs.org/"`;

exports[`ReactRefreshLogBox app turbo logbox: anchors links in error messages 5`] = `"Error: middle https://nextjs.org end"`;

exports[`ReactRefreshLogBox app turbo logbox: anchors links in error messages 6`] = `"https://nextjs.org/"`;

exports[`ReactRefreshLogBox app turbo logbox: anchors links in error messages 7`] = `"https://nextjs.org/"`;

exports[`ReactRefreshLogBox app turbo module init error not shown 1`] = `
"index.js (3:7) @ [project]/index.js [app-client] (ecmascript)

  1 | // top offset for snapshot
  2 | import * as React from 'react';
> 3 | throw new Error('no')
    |       ^
  4 | class ClassDefault extends React.Component {
  5 |   render() {
  6 |     return <h1>Default Export</h1>;"
`;

exports[`ReactRefreshLogBox app turbo should hide unrelated frames in stack trace with nodejs internal calls 1`] = `
"app/page.js (2:3) @ Page

  1 | export default function Page() {
> 2 |   new URL("/", "invalid");
    |   ^
  3 | }"
`;

exports[`ReactRefreshLogBox app turbo should hide unrelated frames in stack trace with unknown anonymous calls 1`] = `
"app/page.js (4:13) @ <anonymous>

  2 |   try {
  3 |     (function() {
> 4 |       throw new Error("This is an error from an anonymous function");
    |             ^
  5 |     })();
  6 |   } catch (e) {
  7 |     throw e"
`;

exports[`ReactRefreshLogBox app turbo should strip whitespace correctly with newline 1`] = `
"index.js (7:15) @ onClick

   5 |
   6 |       <a onClick={() => {
>  7 |         throw new Error('idk')
     |               ^
   8 |       }}>
   9 |         click me
  10 |       </a>"
`;
